--- a/index.html
+++ b/index.html
@@ -3,35 +3,67 @@ layout: default
 title: Home
 ---
 
-<section class="hero" style="text-align: center; padding: 3rem 1rem;">
-  <h1 style="font-size: 2.5rem;">Hi, I'm <strong>Ikenna</strong></h1>
-  <p style="font-size: 1.25rem; color: #666;">Senior Android Developer — Building secure, scalable mobile experiences</p>
-</section>
-
-<section id="featured-projects" style="padding: 2rem 1rem;">
-  <h2>Featured Projects</h2>
-  <div id="project-list" style="display: flex; flex-wrap: wrap; gap: 1rem;">
-    <!-- Project cards from GitHub API will appear here -->
+<section class="hero">
+  <h1>Hi, I’m Ikenna — Senior Android Developer</h1>
+  <p class="tagline">Building intuitive, high-performance Android apps with clean, scalable Java code.</p>
+  <div class="hero-cta">
+    <a href="{{ site.baseurl }}/projects" class="btn">View My Projects</a>
+    <a href="{{ site.baseurl }}/contact" class="btn btn-secondary">Contact Me</a>
   </div>
 </section>
 
-<script>
-  // Fetch GitHub repos
-  fetch("https://api.github.com/users/ikenna-i/repos?sort=updated&per_page=6")
-    .then(response => response.json())
-    .then(repos => {
-      const container = document.getElementById('project-list');
-      repos.forEach(repo => {
-        const card = document.createElement('div');
-        card.style.border = "1px solid #ddd";
-        card.style.borderRadius = "8px";
-        card.style.padding = "1rem";
-        card.style.flex = "1 1 calc(33% - 1rem)";
-        card.innerHTML = `
-          <h3><a href="${repo.html_url}" target="_blank">${repo.name}</a></h3>
-          <p>${repo.description || "No description available"}</p>
-        `;
-        container.appendChild(card);
-      });
-    });
-</script>
+<section class="about-me">
+  <h2>About Me</h2>
+  <p>
+    I’m a passionate Android developer with over 8 years of experience specializing in Java-based apps. I create scalable, maintainable mobile solutions using modern architecture patterns like MVVM, dependency injection with Hilt, and clean code principles.
+  </p>
+  <p>
+    Skilled in integrating REST APIs, managing local databases with Room, and writing effective unit and UI tests. I’m always eager to learn and grow, bringing strong problem-solving skills to every project.
+  </p>
+  <a href="{{ site.baseurl }}/files/Ikenna_Resume.pdf" class="btn btn-secondary" download>Download Resume</a>
+</section>
+
+<section class="skills">
+  <h2>Key Skills & Technologies</h2>
+  <ul class="skills-list">
+    <li>Java & Android SDK</li>
+    <li>MVVM Architecture</li>
+    <li>Room Database & SQLite</li>
+    <li>Hilt Dependency Injection</li>
+    <li>Retrofit & REST APIs</li>
+    <li>JUnit & Espresso Testing</li>
+    <li>Git & Version Control</li>
+  </ul>
+</section>
+
+<section class="featured-projects">
+  <h2>Featured Projects</h2>
+  <div class="projects-grid">
+
+    <div class="project-card">
+      <h3><i class="fas fa-mobile-alt"></i> Smart Expense Tracker</h3>
+      <p>Android app to track expenses, categorize spending, and visualize charts.</p>
+      <a class="btn" href="{{ site.baseurl }}/projects/trackulator">View Details</a>
+    </div>
+
+    <div class="project-card">
+      <h3><i class="fas fa-link"></i> Link Saver</h3>
+      <p>Save, organize, and share links securely with contact profiles and status downloads.</p>
+      <a class="btn" href="{{ site.baseurl }}/projects/link-saver">View Details</a>
+    </div>
+
+    <div class="project-card">
+      <h3><i class="fas fa-music"></i> Music Player Pro</h3>
+      <p>Feature-rich Android music player with playlists and equalizer.</p>
+      <a class="btn" href="{{ site.baseurl }}/projects/music-player-pro">View Details</a>
+    </div>
+
+  </div>
+</section>
+
+<section class="contact-info">
+  <h2>Contact Me</h2>
+  <p>Email: <a href="mailto:ikenna@example.com">ikenna@example.com</a></p>
+  <p>LinkedIn: <a href="https://linkedin.com/in/ikenna" target="_blank" rel="noopener">linkedin.com/in/ikenna</a></p>
+  <p>GitHub: <a href="https://github.com/ikenna-i" target="_blank" rel="noopener">github.com/ikenna-i</a></p>
+</section>
