--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ title: Home
 ---
 
 <section class="hero">
-  <h1>Hi, I’m Ikenna — Senior Android Developer</h1>
-  <p class="tagline">Building intuitive, high-performance Android apps with clean, scalable Java code.</p>
+  <h1>IKENNA IGBOASOIYI</h1>
+  <h2>Software Engineer | Senior Android Developer</h2>
+  <p class="tagline">Building scalable, maintainable Android apps with clean Java code and modern architecture.</p>
   <div class="hero-cta">
     <a href="{{ site.baseurl }}/projects" class="btn">View My Projects</a>
     <a href="{{ site.baseurl }}/contact" class="btn btn-secondary">Contact Me</a>
@@ -15,55 +16,80 @@ title: Home
 <section class="about-me">
   <h2>About Me</h2>
   <p>
-    I’m a passionate Android developer with over 8 years of experience specializing in Java-based apps. I create scalable, maintainable mobile solutions using modern architecture patterns like MVVM, dependency injection with Hilt, and clean code principles.
+    I am a competent Software Engineer with proficient knowledge in systems design, software development, and IT consultancy.  
+    With practical skills in full-stack Java programming and Android development, I’m known for excellent troubleshooting,  
+    analyzing code, and engineering well-researched, cost-effective enterprise solutions.  
+    Innovative and results-oriented, I thrive under pressure and contribute to best practices and procedures within organizations.
   </p>
-  <p>
-    Skilled in integrating REST APIs, managing local databases with Room, and writing effective unit and UI tests. I’m always eager to learn and grow, bringing strong problem-solving skills to every project.
-  </p>
-  <a href="{{ site.baseurl }}/files/Ikenna_Resume.pdf" class="btn btn-secondary" download>Download Resume</a>
-</section>
 
-<section class="skills">
-  <h2>Key Skills & Technologies</h2>
-  <ul class="skills-list">
-    <li>Java & Android SDK</li>
-    <li>MVVM Architecture</li>
-    <li>Room Database & SQLite</li>
-    <li>Hilt Dependency Injection</li>
-    <li>Retrofit & REST APIs</li>
-    <li>JUnit & Espresso Testing</li>
-    <li>Git & Version Control</li>
+  <h3>Education</h3>
+  <ul>
+    <li><strong>M.Sc. Software Engineering (Distinction)</strong>, University of Greenwich, London (2015–2016)</li>
+    <li><strong>Diploma in Software Engineering</strong>, New Horizon Institute, Lagos (2012–2013)</li>
+    <li><strong>B.Eng. Polymer and Textile Engineering</strong>, Federal University of Technology, Owerri (2005–2010)</li>
+    <li><strong>Senior Secondary School Certificate (SSCE, NECO)</strong>, Federal Government College, Okposi (1999–2005)</li>
   </ul>
 </section>
 
-<section class="featured-projects">
-  <h2>Featured Projects</h2>
-  <div class="projects-grid">
+<section class="key-skills">
+  <h2>Key Skills</h2>
+  <ul>
+    <li>Strong programming & database knowledge (Java, Kotlin, SQL, NoSQL, Realm, Firebase)</li>
+    <li>Expertise in software engineering & project management</li>
+    <li>Solid object-oriented design & use of design patterns</li>
+    <li>Full system development lifecycle (Plan, Design, Build, Test, Deliver)</li>
+    <li>Effective problem solving, root cause analysis & troubleshooting</li>
+    <li>Excellent communication & team collaboration skills</li>
+  </ul>
+</section>
 
-    <div class="project-card">
-      <h3><i class="fas fa-mobile-alt"></i> Smart Expense Tracker</h3>
-      <p>Android app to track expenses, categorize spending, and visualize charts.</p>
-      <a class="btn" href="{{ site.baseurl }}/projects/trackulator">View Details</a>
-    </div>
+<section class="technical-skills">
+  <h2>Technical Skills</h2>
+  <p>
+    Programming: Java, Kotlin, JSP, JPA, JUnit, Android SDK, REST APIs, Spring Framework, Maven, Gradle, Git<br>
+    Databases: MySQL, SQLite, Realm, Firebase<br>
+    Tools & Frameworks: MVVM, Hilt, Retrofit, Espresso, Bootstrap, Microsoft Project
+  </p>
+</section>
 
-    <div class="project-card">
-      <h3><i class="fas fa-link"></i> Link Saver</h3>
-      <p>Save, organize, and share links securely with contact profiles and status downloads.</p>
-      <a class="btn" href="{{ site.baseurl }}/projects/link-saver">View Details</a>
-    </div>
+<section class="experience">
+  <h2>Professional Experience</h2>
+  <h3>Software Engineer & Android Developer (Freelancer) - Choristera Technologies, Nigeria (2020–Present)</h3>
+  <ul>
+    <li>Designed wholesale delivery backend system using Spring Boot connecting warehouses and store inventories</li>
+    <li>Developed event planning management system with digital brochures</li>
+    <li>Built mobile apps for detectives to record investigation details</li>
+    <li>Created offline shopping management and SAAS inventory apps for retail businesses</li>
+  </ul>
 
-    <div class="project-card">
-      <h3><i class="fas fa-music"></i> Music Player Pro</h3>
-      <p>Feature-rich Android music player with playlists and equalizer.</p>
-      <a class="btn" href="{{ site.baseurl }}/projects/music-player-pro">View Details</a>
-    </div>
+  <h3>Software Developer - Simplaa Limited, London (2017–2020)</h3>
+  <ul>
+    <li>Developed automated dispatch system with Multi Criteria Decision Analysis</li>
+    <li>Integrated RESTful services for charge and quote generation</li>
+    <li>Built on-demand taxi app with real-time tracking and desktop dispatch system</li>
+  </ul>
 
-  </div>
+  <h3>Operations Supervisor & Software Developer - Mottolines Airport Transfer, London (2013–2015)</h3>
+  <ul>
+    <li>Handled IT support tasks</li>
+    <li>Maintained dispatch systems and web apps</li>
+  </ul>
+</section>
+
+<section class="stats">
+  <h2>Quick Stats</h2>
+  <ul class="stats-list">
+    <li><strong>8+</strong> Years Android Development</li>
+    <li><strong>10+</strong> Major Projects Delivered</li>
+    <li><strong>100k+</strong> Users Reached</li>
+    <li><strong>Distinction</strong> in MSc Software Engineering</li>
+  </ul>
 </section>
 
 <section class="contact-info">
-  <h2>Contact Me</h2>
-  <p>Email: <a href="mailto:ikenna@example.com">ikenna@example.com</a></p>
-  <p>LinkedIn: <a href="https://linkedin.com/in/ikenna" target="_blank" rel="noopener">linkedin.com/in/ikenna</a></p>
-  <p>GitHub: <a href="https://github.com/ikenna-i" target="_blank" rel="noopener">github.com/ikenna-i</a></p>
+  <h2>Get In Touch</h2>
+  <p>Phone: <a href="tel:+2348038524791">+2348038524791</a></p>
+  <p>Email: <a href="mailto:ikennaigboasoiyi@yahoo.com">ikennaigboasoiyi@yahoo.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/ikennaigboasoiyi" target="_blank" rel="noopener">linkedin.com/in/ikennaigboasoiyi</a></p>
+  <p>Address: 6 Gbaja Street, Surulere, Lagos State, Nigeria</p>
 </section>
