--- a/index.html
+++ b/index.html
@@ -6,90 +6,66 @@ title: Home
 <section class="hero">
   <h1>IKENNA IGBOASOIYI</h1>
   <h2>Software Engineer | Senior Android Developer</h2>
-  <p class="tagline">Building scalable, maintainable Android apps with clean Java code and modern architecture.</p>
+  <p class="tagline">
+    Competent Software Engineer with proficient knowledge in systems design, software development, and IT consultancy.
+  </p>
   <div class="hero-cta">
-    <a href="{{ site.baseurl }}/projects" class="btn">View My Projects</a>
-    <a href="{{ site.baseurl }}/contact" class="btn btn-secondary">Contact Me</a>
+    <a href="{{ site.baseurl }}/projects" class="btn">View Projects</a>
+    <a href="{{ site.baseurl }}/about" class="btn btn-secondary">About Me</a>
   </div>
 </section>
 
 <section class="about-me">
   <h2>About Me</h2>
   <p>
-    I am a competent Software Engineer with proficient knowledge in systems design, software development, and IT consultancy.  
-    With practical skills in full-stack Java programming and Android development, I’m known for excellent troubleshooting,  
-    analyzing code, and engineering well-researched, cost-effective enterprise solutions.  
-    Innovative and results-oriented, I thrive under pressure and contribute to best practices and procedures within organizations.
+    Practical skills with full-stack Java programming and Android development. Known for excellent troubleshooting skills and ability to engineer well-researched, cost-effective enterprise solutions.
+    Innovative and result-oriented, able to work under pressure and contribute to best practices, procedures, and policies.
   </p>
-
-  <h3>Education</h3>
-  <ul>
-    <li><strong>M.Sc. Software Engineering (Distinction)</strong>, University of Greenwich, London (2015–2016)</li>
-    <li><strong>Diploma in Software Engineering</strong>, New Horizon Institute, Lagos (2012–2013)</li>
-    <li><strong>B.Eng. Polymer and Textile Engineering</strong>, Federal University of Technology, Owerri (2005–2010)</li>
-    <li><strong>Senior Secondary School Certificate (SSCE, NECO)</strong>, Federal Government College, Okposi (1999–2005)</li>
-  </ul>
 </section>
 
 <section class="key-skills">
   <h2>Key Skills</h2>
   <ul>
-    <li>Strong programming & database knowledge (Java, Kotlin, SQL, NoSQL, Realm, Firebase)</li>
-    <li>Expertise in software engineering & project management</li>
-    <li>Solid object-oriented design & use of design patterns</li>
-    <li>Full system development lifecycle (Plan, Design, Build, Test, Deliver)</li>
-    <li>Effective problem solving, root cause analysis & troubleshooting</li>
-    <li>Excellent communication & team collaboration skills</li>
+    <li>Strong programming and database concepts</li>
+    <li>Software engineering and project management</li>
+    <li>Object-oriented design and design patterns</li>
+    <li>Effective planning and root cause analysis</li>
+    <li>Excellent communication and team-building</li>
   </ul>
 </section>
 
 <section class="technical-skills">
   <h2>Technical Skills</h2>
   <p>
-    Programming: Java, Kotlin, JSP, JPA, JUnit, Android SDK, REST APIs, Spring Framework, Maven, Gradle, Git<br>
-    Databases: MySQL, SQLite, Realm, Firebase<br>
-    Tools & Frameworks: MVVM, Hilt, Retrofit, Espresso, Bootstrap, Microsoft Project
+    Java, Kotlin, Android SDK, Realm DB, SQLite, Firebase, Spring Framework, RESTful APIs, Maven, Gradle, Git, HTML5, CSS3, Bootstrap.
   </p>
 </section>
 
 <section class="experience">
-  <h2>Professional Experience</h2>
-  <h3>Software Engineer & Android Developer (Freelancer) - Choristera Technologies, Nigeria (2020–Present)</h3>
+  <h2>Experience Highlights</h2>
+  <h3>Software Engineer & Android Developer — Choristera Technologies (2020 – Present)</h3>
   <ul>
-    <li>Designed wholesale delivery backend system using Spring Boot connecting warehouses and store inventories</li>
-    <li>Developed event planning management system with digital brochures</li>
-    <li>Built mobile apps for detectives to record investigation details</li>
-    <li>Created offline shopping management and SAAS inventory apps for retail businesses</li>
+    <li>Designed wholesale delivery backend system using Spring Boot.</li>
+    <li>Developed event planning and management system with digital brochure.</li>
+    <li>Built mobile apps for crime scene investigation and offline shopping management.</li>
   </ul>
 
-  <h3>Software Developer - Simplaa Limited, London (2017–2020)</h3>
+  <h3>Software Developer — Simplaa Limited, London (2017 – 2020)</h3>
   <ul>
-    <li>Developed automated dispatch system with Multi Criteria Decision Analysis</li>
-    <li>Integrated RESTful services for charge and quote generation</li>
-    <li>Built on-demand taxi app with real-time tracking and desktop dispatch system</li>
+    <li>Developed automated dispatch system with Multi Criteria Decision Analysis.</li>
+    <li>Created on-demand taxi app with Google Maps integration and real-time tracking.</li>
   </ul>
 
-  <h3>Operations Supervisor & Software Developer - Mottolines Airport Transfer, London (2013–2015)</h3>
+  <h3>Operations Supervisor & Software Developer — Mottolines Airport Transfer (2013 – 2015)</h3>
   <ul>
-    <li>Handled IT support tasks</li>
-    <li>Maintained dispatch systems and web apps</li>
-  </ul>
-</section>
-
-<section class="stats">
-  <h2>Quick Stats</h2>
-  <ul class="stats-list">
-    <li><strong>8+</strong> Years Android Development</li>
-    <li><strong>10+</strong> Major Projects Delivered</li>
-    <li><strong>100k+</strong> Users Reached</li>
-    <li><strong>Distinction</strong> in MSc Software Engineering</li>
+    <li>Handled IT support and maintained dispatch systems and web applications.</li>
   </ul>
 </section>
 
 <section class="contact-info">
-  <h2>Get In Touch</h2>
-  <p>Phone: <a href="tel:+2348038524791">+2348038524791</a></p>
-  <p>Email: <a href="mailto:ikennaigboasoiyi@yahoo.com">ikennaigboasoiyi@yahoo.com</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/ikennaigboasoiyi" target="_blank" rel="noopener">linkedin.com/in/ikennaigboasoiyi</a></p>
-  <p>Address: 6 Gbaja Street, Surulere, Lagos State, Nigeria</p>
+  <h2>Contact</h2>
+  <p><strong>Phone:</strong> +2348038524791</p>
+  <p><strong>Email:</strong> <a href="mailto:ikennaigboasoiyi@yahoo.com">ikennaigboasoiyi@yahoo.com</a></p>
+  <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ikennaigboasoiyi" target="_blank" rel="noopener noreferrer">linkedin.com/in/ikennaigboasoiyi</a></p>
+  <p><strong>Address:</strong> 6 Gbaja Street, Surulere, Lagos State, Nigeria</p>
 </section>
