--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <section class="hero">
   <h1>IKENNA IGBOASOIYI</h1>
-  <h2>Software Engineer | Senior Android Developer</h2>
+  <h2>Software Engineer</h2>
   <p class="tagline">
     Competent Software Engineer with proficient knowledge in systems design, software development, and IT consultancy.
   </p>
