--- a/index.html
+++ b/index.html
@@ -1,127 +1,31 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>{{ site.title }}</title>
-<style>
-  body, html {
-    margin: 0; padding: 0; height: 100vh;
-    font-family: Arial, sans-serif;
-  }
-  #container {
-    display: flex;
-    height: 100%;
-  }
-  #left-pane {
-    width: 280px;
-    background: #222;
-    color: white;
-    padding: 20px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #left-pane img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  #left-pane h1 {
-    margin: 0; font-size: 1.8rem;
-  }
-  #left-pane p.title {
-    margin: 5px 0 20px 0;
-    font-weight: 300;
-    font-size: 1.1rem;
-    color: #bbb;
-  }
-  #menu {
-    list-style: none;
-    padding: 0;
-    width: 100%;
-  }
-  #menu li {
-    margin: 10px 0;
-  }
-  #menu li a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
-    display: block;
-    padding: 8px 15px;
-    border-radius: 6px;
-    transition: background-color 0.3s ease;
-  }
-  #menu li a:hover, #menu li a.active {
-    background-color: #007bff;
-  }
-  #right-pane {
-    flex-grow: 1;
-    padding: 30px;
-    overflow-y: auto;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>{{ page.title }} - {{ site.title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
+  <div class="two-pane-container">
+    <!-- LEFT PANE -->
+    <aside class="left-pane">
+      <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="{{ site.author.name }}">
+      <h1>{{ site.author.name }}</h1>
+      <p class="title">{{ site.author.title }}</p>
+      <nav>
+        <ul>
+          <li><a href="{{ '/' | relative_url }}">About</a></li>
+          <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
+          <li><a href="{{ '/contact/' | relative_url }}">Contact</a></li>
+        </ul>
+      </nav>
+    </aside>
 
-<div id="container">
-  <div id="left-pane">
-    <img src="/assets/images/profile.jpg" alt="Your Name" />
-    <h1>Your Name</h1>
-    <p class="title">Your Title</p>
-    <ul id="menu">
-      <li><a href="#" data-page="about" class="active">About</a></li>
-      <li><a href="#" data-page="projects">Projects</a></li>
-      <li><a href="#" data-page="contact">Contact</a></li>
-    </ul>
+    <!-- RIGHT PANE -->
+    <main class="right-pane">
+      {{ content }}
+    </main>
   </div>
-  <div id="right-pane">
-    Loading...
-  </div>
-</div>
-
-<script>
-  const rightPane = document.getElementById('right-pane');
-  const menuLinks = document.querySelectorAll('#menu a');
-
-  // Function to load page content dynamically
-  function loadPage(page) {
-    // Update active menu style
-    menuLinks.forEach(link => {
-      link.classList.toggle('active', link.dataset.page === page);
-    });
-
-    // Fetch the page content HTML (Assuming you have static HTML partials)
-    fetch(`/pages/${page}.html`)
-      .then(response => {
-        if (!response.ok) throw new Error('Page not found');
-        return response.text();
-      })
-      .then(html => {
-        rightPane.innerHTML = html;
-      })
-      .catch(() => {
-        rightPane.innerHTML = '<p>Failed to load content.</p>';
-      });
-  }
-
-  // Attach click handlers to menu links
-  menuLinks.forEach(link => {
-    link.addEventListener('click', e => {
-      e.preventDefault();
-      const page = e.target.dataset.page;
-      loadPage(page);
-    });
-  });
-
-  // Load default page on load
-  loadPage('about');
-</script>
-
 </body>
 </html>
