--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
       <p class="title">{{ site.author.title }}</p>
       <nav>
         <ul>
-          <li><a href="{{ '/' | relative_url }}">About</a></li>
-          <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
-          <li><a href="{{ '/contact/' | relative_url }}">Contact</a></li>
+<!--           <li><a href="{{ '/' | relative_url }}">About</a></li> -->
+<!--           <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li> -->
+<!--           <li><a href="{{ '/contact/' | relative_url }}">Contact</a></li> -->
+          <li><a href="{{ site.baseurl }}/about">About</a></li>
+          <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
+          <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+          
         </ul>
       </nav>
     </aside>
