--- a/index.html
+++ b/index.html
@@ -2,34 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ page.title }} - {{ site.title }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
 </head>
 <body>
-  <div class="two-pane-container">
-    <!-- LEFT PANE -->
-    <aside class="left-pane">
-      <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="{{ site.author.name }}">
-      <h1>{{ site.author.name }}</h1>
-      <p class="title">{{ site.author.title }}</p>
-      <nav>
-        <ul>
-<!--           <li><a href="{{ '/' | relative_url }}">About</a></li> -->
-<!--           <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li> -->
-<!--           <li><a href="{{ '/contact/' | relative_url }}">Contact</a></li> -->
-          <li><a href="{{ site.baseurl }}/about">About</a></li>
-          <li><a href="{{ site.baseurl }}/projects">Projects</a></li>
-          <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-          
-        </ul>
-      </nav>
-    </aside>
+  <header>
+    <nav>
+      <a href="{{ '/' | relative_url }}" class="nav-link">Home</a>
+      <a href="{{ '/about' | relative_url }}" class="nav-link">About</a>
+      <a href="{{ '/projects' | relative_url }}" class="nav-link">Projects</a>
+      <a href="{{ '/contact' | relative_url }}" class="nav-link">Contact</a>
+    </nav>
+  </header>
 
-    <!-- RIGHT PANE -->
-    <main class="right-pane">
-      {{ content }}
-    </main>
-  </div>
+  <main id="main-content">
+    {{ content }}
+  </main>
+
+  <footer>
+    <p>© {{ site.time | date: "%Y" }} My Portfolio</p>
+  </footer>
+
+  <script src="{{ '/assets/ajax-nav.js' | relative_url }}"></script>
 </body>
 </html>
