--- a/index.html
+++ b/index.html
@@ -1,28 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="{{ '/' | relative_url }}" class="nav-link">Home</a>
-      <a href="{{ '/about' | relative_url }}" class="nav-link">About</a>
-      <a href="{{ '/projects' | relative_url }}" class="nav-link">Projects</a>
-      <a href="{{ '/contact' | relative_url }}" class="nav-link">Contact</a>
-    </nav>
-  </header>
+---
+layout: default
+permalink: /
+---
 
-  <main id="main-content">
-    {{ content }}
-  </main>
-
-  <footer>
-    <p>© {{ site.time | date: "%Y" }} My Portfolio</p>
-  </footer>
-
-  <script src="{{ '/assets/ajax-nav.js' | relative_url }}"></script>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url={{ site.baseurl }}/about">
